iml-agent/src/action_plugins/snapshots/iml_agent__action_plugins__ldev__tests__config_without_ha.snap
---
source: iml-agent/src/action_plugins/ldev.rs
expression: content
---
mds1 - MGS zfs:mdt0/mdt0
mds1 mds2 zfsmo-MDT0000 zfs:mdt0/mdt0
